<resources>
    <string name="app_name">AbrahamAlfredBabu_PiaMaeObias_SatenderYadav_ MAPD711_ Project</string>
    <string name="add_task_task_name_hint">Enter Task Name</string>
    <string name="add_task_description">Description</string>
    <string name="task_page_cancel_button">CANCEL</string>
    <string name="add_task_menu_save_item">Save task</string>

    <array name="priority_list">
        <item>Select Priority</item>
        <item>HIGH</item>
        <item>MEDIUM</item>
        <item>LOW</item>
    </array>

    <string name="add_task_title">New Task</string>
    <string name="add_task_save_button">SAVE</string>

    <string name="due_date">Due Date</string>
    <string name="select_date">Select Date</string>
    <string name="checkbox">CheckBox</string>
    <string name="new_assignment_title">New Assignment</string>
    <string name="add_assignment_title_hint">Enter Name</string>
    <string name="add_assignment_notes_description">Notes/Description</string>
    <string name="add_assignment_save_button">Save</string>
    <string name="assignment_list_assignment_title">Assignment Title</string>
    <string name="assignment_card_description">Description</string>
    <string name="assignment_list_new_assignment_button">New Assignment</string>
    <string name="tasks_list_new_task">New Task</string>

</resources>