<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.fragments.AddAssignmentFragment">


    <TextView
        android:id="@+id/add_assignment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_assignment_title"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        style="@style/TextAppearance.AppCompat.Title"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_assignment_assignment_title"
            android:hint="@string/add_assignment_title_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/checkbox"
            android:id="@+id/completeButton"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_baseline_calendar_month_24"
            android:backgroundTint="@android:color/transparent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_assignment_date_picker"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/select_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/checkbox"
            android:layout_marginHorizontal="30dp"
            android:src="@drawable/ic_baseline_notes_24"
            android:backgroundTint="@android:color/transparent"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/add_assignment_description"
                android:hint="@string/add_assignment_notes_description">

            </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_assignment_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?colorOnPrimary"
        android:text="@string/add_assignment_save_button"/>

</LinearLayout>