<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/assignment_card_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/sand"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/assignment_card_title"
            android:textColor="@color/indigo"
            android:text="@string/assignment_list_assignment_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:layout_marginHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assignment_card_due_date"
            android:textColor="@color/indigo"
            android:text="@string/due_date"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:contentDescription="@string/checkbox"
            android:id="@+id/assignment_card_expand_button"
            android:layout_marginHorizontal="15dp"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:backgroundTint="@android:color/transparent"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/assignment_card_expendable_layout"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/assignment_card_description"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/fresca"
            android:text="@string/assignment_card_description"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>