<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    tools:context=".views.AddTaskActivity">

    <TextView
        android:id="@+id/add_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/indigo"
        android:text="@string/add_task_title"/>

    <EditText
        android:id="@+id/add_task_task_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf ="@id/add_task_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/add_task_priority_select_background"
        android:hint="@string/add_task_task_name_hint"
        android:textColor="@color/task_page_edit_text_text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/task_page_edit_text_hint"/>

    <TextView
        android:id="@+id/add_task_set_priority_label"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:paddingStart="15dp"
        app:drawableStartCompat="@drawable/ic_priority_select_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_task_task_name" />

    <Spinner
        android:id="@+id/add_task_set_priority_spinner"
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/add_task_set_priority_label"
        app:layout_constraintTop_toBottomOf="@id/add_task_task_name"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/task_page_cancel_button_background"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/add_task_description_label"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/add_task_set_priority_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_short_text_24" />

    <EditText
        android:id="@+id/add_task_description_edit_text"
        android:inputType="textMultiLine"
        android:lines="8"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/add_task_set_priority_label"
        app:layout_constraintStart_toEndOf="@id/add_task_description_label"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/add_task_description"
        android:padding="15dp"
        android:textColorHint="@color/task_page_edit_text_hint"
        android:textColor="@color/task_page_edit_text_text"
        android:background="@drawable/add_task_priority_select_background"/>

    <TextView
        android:id="@+id/add_task_save_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/add_task_description_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/add_task_save_button"
        android:backgroundTint="@color/indigo"
        android:background="@drawable/add_task_cancel_button_background"/>

    <TextView
        android:id="@+id/add_task_cancel_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/add_task_description_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/task_page_cancel_button"
        android:background="@drawable/add_task_cancel_button_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>